[project]
name = "neuronal-net-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "jonas.schrage",email = "119843859+joschrag@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "neuronal_net_playground", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.16.1"
pylint = "^3.3.7"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
